# wiringPi

./: .gitignore  Application.mk  CMakeLists.txt  README.TXT
gpio/: CMakeLists.txt  gpio.c  readall.c
jni/: Android.mk
wiringPi/: CMakeLists.txt  wiringPi.c  wiringPi.h  wiringPiI2C.c  wiringPiSPI.c
